[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korsrt-fixer"
version = "0.1.0"
description = "Korean SRT subtitle file fixer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
korsrt-fixer = "fixer:main"

[tool.hatch.build.targets.wheel]
only-include = ["fixer.py"]

[tool.uv]
package = true